Enhance image animation functionality in index.js by including .gif-container in the selector and improving visibility checks for smoother animations. Update styles.css to apply animations to .gif-container. Modify work.html to change image loading strategy from eager to lazy for better performance.

--- a/work.html
+++ b/work.html
@@ -91,11 +91,10 @@
             <span class="desktop-text">Hover to play</span>
           </p>
         </div>
-        <div class="image-item preloaded mobile-only">
+        <div class="image-item mobile-only">
           <img src="Feature intro Thumbnail.png" 
                alt="User interface for Forbes: Explore." 
-               loading="eager" 
-               class="loaded">
+               loading="lazy">
         </div>
         <div id="tagdiv">
           <span class="context-tag">0→1 Product Design</span>
@@ -106,8 +105,8 @@
       <p>Rethinking news & information consumption habits amidst the proliferation of AI.</p>
     </main>
     <div class="project-content">
-      <div class="image-item preloaded">
-        <img src="Bertie Publish.png" alt="User interface for Bertie Publish." loading="eager" class="loaded">
+      <div class="image-item">
+        <img src="Bertie Publish.png" alt="User interface for Bertie Publish." loading="lazy">
       </div>
       <div id="tagdiv">
         <span class="context-tag">CMS</span>
