Refactor image animation logic in index.js to optimize performance for mobile devices, including adjustments to intersection observer thresholds and delays. Update styles.css to enhance animation effects and introduce mobile-specific optimizations. Modify work.html to improve image structure and maintain consistency across devices.

--- a/work.html
+++ b/work.html
@@ -73,23 +73,25 @@
 
   <div class="project-grid">
     <main class="project-content">
-        <div class="gif-container interactive-gif desktop-only">
-          <div class="gif-loader"></div>
-          <img src="xplore.gif" 
-               alt="User interface for Forbes: Explore." 
-               loading="eager" 
-               class="gif-loading gif-interactive"
-               data-gif-src="xplore.gif"
-               data-static-src="Feature intro Thumbnail.png">
-          <div class="gif-play-indicator">
-            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <circle cx="12" cy="12" r="10" fill="rgba(255,255,255,0.9)"/>
-              <path d="M10 8l6 4-6 4V8z" fill="black"/>
-            </svg>
+        <div class="image-item desktop-only">
+          <div class="gif-container interactive-gif">
+            <div class="gif-loader"></div>
+            <img src="xplore.gif" 
+                 alt="User interface for Forbes: Explore." 
+                 loading="eager" 
+                 class="gif-loading gif-interactive"
+                 data-gif-src="xplore.gif"
+                 data-static-src="Feature intro Thumbnail.png">
+            <div class="gif-play-indicator">
+              <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <circle cx="12" cy="12" r="10" fill="rgba(255,255,255,0.9)"/>
+                <path d="M10 8l6 4-6 4V8z" fill="black"/>
+              </svg>
+            </div>
+            <p class="gif-annotation">
+              <span class="desktop-text">Hover to play</span>
+            </p>
           </div>
-          <p class="gif-annotation">
-            <span class="desktop-text">Hover to play</span>
-          </p>
         </div>
         <div class="image-item mobile-only">
           <img src="Feature intro Thumbnail.png" 
