Update explore.html to refine user engagement metrics and clarify the impact of the Explore initiative. Modify index.js and work.html to incorporate 'Preview.png' for improved image handling and consistency across pages. Update binary files for xplore.gif and .DS_Store to reflect recent changes.

--- a/work.html
+++ b/work.html
@@ -81,7 +81,7 @@
                  loading="eager" 
                  class="gif-loading gif-interactive"
                  data-gif-src="xplore.gif"
-                 data-static-src="Feature intro Thumbnail.png">
+                 data-static-src="Preview.png">
             <div class="gif-play-indicator">
               <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="12" cy="12" r="10" fill="rgba(255,255,255,0.9)"/>
@@ -94,7 +94,7 @@
           </div>
         </div>
         <div class="image-item mobile-only">
-          <img src="Feature intro Thumbnail.png" 
+          <img src="Preview.png" 
                alt="User interface for Forbes: Explore." 
                loading="lazy">
         </div>
