Update work.html to correct wording for clarity in the Bertie SEO description. Update binary files for .DS_Store and Bertie Publish.png to reflect recent changes.

--- a/work.html
+++ b/work.html
@@ -116,7 +116,7 @@
         <span class="context-tag">Workflow Automation</span>
       </div>
     <h3>Bertie: SEO Sidekick & Assistant</h3>
-    <p>Every superhero needs a sidekick; Making SEO tasks more engaging and educational for Forbes' journalists.
+    <p>Every superhero needs a sidekick; making SEO tasks more engaging and informative for Forbes' journalists.
      </p>
     </div>
 
