Update explore.html to enhance clarity and engagement by refining user quotes, improving phrasing in the How Might We statement, and adjusting descriptions for better readability and impact.

--- a/explore.html
+++ b/explore.html
@@ -386,7 +386,7 @@
 
           <p style="font-size: 14px;">User 2 in relation to what makes Instagram an ideal platform 
             for news consumption.</p>
-          <h3>" Like with Instagram, I like the idea of getting various pieces of information quickly. "</h3>
+          <h3>" Like with Instagram, I like the idea of getting various pieces of <span style="text-decoration:underline;">information quickly</span>. "</h3>
   </div>
   
 </div>
@@ -462,8 +462,8 @@
 <br>
 <h3>From Here, We Created This How Might We Statement:</h3> 
   <p class="'lead-paragraph" style="font-size:18px;">How might we design a quick, snackable news
-     experience that leverages peer commentary <b>allowing users to grasp the essence of multiple stories more
-      easily than reading a single dense article.</b></p>  <br>    
+     experience that leverages peer commentary and <b>empowers users to grasp the essence of multiple stories more
+      easily than reading a single dense article?</b></p>  <br>    
 
 
 
@@ -493,7 +493,7 @@
         <br>
         This quick, digestible format allows users to grasp not just what happened, but <b>why 
         it’s significant in a larger context</b>, without committing to a full read. At the same time, 
-        it provides a clear pathway to the full article for those who want to dive deeper.
+        it provides a clear pathway to the full article for those who want to go deeper.
       </p>
     </div>
          <div class="feature-image image-item">
@@ -507,7 +507,7 @@
       <h3 class="feature-headline">Social Commentary Layer: Reader Reactions</h3>
       <p class="feature-description">
 At its core,<b> news is social and reactionary.</b> Reader Reactions were inspired by the nudge theory; surfacing 
-lightweight social cues; such as: 'Readers found this Insightful' etc. This was to signal value and encourage engagement with content 
+lightweight social cues; such as: 'Readers found this: Insightful, Surprising, etc.' This was to signal value, and <b>extrinsincially encourage engagement</b> with content 
 that another reader might otherwise have overlooked.</p> <br> <p class="feature-description"> By using social proof as a peer-to-peer recommendation signal, Reader Reactions encouraged more engagement with Digests, leading to a 
 higher rate of Digests opened per user session.
       </p>
@@ -567,9 +567,8 @@ higher rate of Digests opened per user session.
         <p></p>
 
         <p class="feature-description">Instead of traditional page-to-page loads, users could scroll within a Digest panel, 
-          click “Next Read,” and instantly transition to the next story within that topic,
-          via a scroll-to-top interaction. It was our way of interpolating swipeable, 
-          snackable behavior into a fast, text-based, web-native experience.</p>
+          click “Next Read,” and instantly transition to the next story within that topic. We leveraged a scroll-to-top interaction to achieve this;
+          interpolating swipeable, snackable behavior into a fast, text-based, web-native experience.</p>
     </div>
     <div class="feature-image image-item">
       <div class="gif-container interactive-gif">
