Refine article digest descriptions in explore.html for improved clarity and relatability, enhancing the presentation of contextual summaries and their significance in news consumption.

--- a/explore.html
+++ b/explore.html
@@ -485,7 +485,7 @@
       <h3 class="feature-headline">Article Digest: AI-Curated Summaries</h3>
       <p class="feature-description">
         Digests were designed to save users time in the exploration phase. 
-        Readers got 3 contextual summaries directly from the source article. a <b>bread-and-butter summary</b>, a  <b>grounding quote</b>, and a <b>“why it matters”</b> lens that ties the story back to broader <i>social, historical, & even cultural</i> trends making news consumption more meaningful on a personal basis.
+        Readers got 3 contextual summaries directly from the source article. A <b>bread-and-butter summary</b>, a <b>grounding quote</b>, and a <b>“why it matters”</b> lens that ties the story back to broader <i>social, historical, & even cultural</i> trends, making news consumption more relatable and meaningful.
         <br>
         <br>
         This quick, digestible format allows users to grasp not just what happened, but <b>why 
