Enhance index.js to implement password gate functionality for bertie-sidekick.html, improve button activation logic, and update explore.html scroll spy. Modify work.html to make project cards clickable and update styles.css for improved hover effects on project cards.

--- a/work.html
+++ b/work.html
@@ -72,7 +72,7 @@
   <div style="margin:auto; text-align: center; margin-top: 140px;"><h2>Recent Work</h2></div>
 
   <div class="project-grid">
-    <main class="project-content">
+    <a href="explore.html" class="project-content">
         <div class="image-item desktop-only">
           <div class="gif-container interactive-gif">
             <div class="gif-loader"></div>
@@ -105,8 +105,8 @@
         </div>
       <h3>Forbes: Explore</h3>
       <p>Rethinking news & information consumption habits amidst the proliferation of AI.</p>
-    </main>
-    <div class="project-content">
+    </a>
+    <a href="bertie-sidekick.html" class="project-content">
       <div class="image-item">
         <img src="Bertie Publish.png" alt="User interface for Bertie Publish." loading="lazy">
       </div>
@@ -118,7 +118,7 @@
     <h3>Bertie: SEO Sidekick & Assistant</h3>
     <p>Every superhero needs a sidekick; making SEO tasks more engaging and informative for Forbes' journalists.
      </p>
-    </div>
+    </a>
 
   </div>
 
