Update bertie-sidekick.html for improved clarity in SEO assistant narrative, correcting phrasing and enhancing readability. Update binary files for .DS_Store and Bertie Publish.png to reflect recent changes.

--- a/bertie-sidekick.html
+++ b/bertie-sidekick.html
@@ -228,7 +228,7 @@
         readership, and ultimately revenue.
       </p>
 
-      <p> Not long ago, SEO at Forbes was straightforward; the company's name alone gave our stories 
+      <p> Not long ago, SEO at Forbes was a walk in the park; the company's name alone gave our stories 
         strong visibility. But with Google’s AI Overviews and Search Generative Experiences reshaping the 
         search landscape, competition for visibility has intensified and to stay ahead, 
         we needed to raise our average SEO performance across all stories.
@@ -246,8 +246,9 @@
         But internal data showed an open rate of only ~29%, with 
         feedback revealing that most of its features fell short of writers’ needs.</p>
         <p>
-            As a result, most writers avoided the assistant altogether. Since many stories 
-            never go through the SEO team, this gap likely dragged down our overall SEO performance.
+            As a result, most writers avoided the assistant altogether and since our SEO Team
+            couldn't possibly review the hundreds of stories published daily, many stories 
+            never go through them and this gap likely dragged down our overall SEO performance.
 
       </p>
 
@@ -256,13 +257,13 @@
       <p class="lead-paragraph">
         We saw this as a chance to reimagine our SEO assistant—designing it to be both more powerful and more intuitive for writers.</p>
 
-    <p class="lead-paragraph"> The was the hypothesis we set out for this tool to achieve was:</p>
+    <p class="lead-paragraph"> The hypothesis we set out to test was:</p>
 
 
       <div class="highlight-box" style="margin-bottom:24px;">
         <h3>By giving writers a more effective and user-friendly tool, we can raise the 
             baseline for SEO across all stories with the pay off being clear: stronger rankings, more pageviews,
-            and ultimately, more revenue for Fores.
+            and ultimately, more revenue for Forbes.
         </h3>
         
       </div>
