Refine bertie-sidekick.html for improved clarity in the SEO narrative by enhancing phrasing. Update explore.html to add headings for user quotes and the How Might We statement, improving visual hierarchy and engagement. Adjust styles.css to remove unnecessary hover effects for a cleaner presentation.

--- a/bertie-sidekick.html
+++ b/bertie-sidekick.html
@@ -246,7 +246,7 @@
         <p>
             As a result, most writers avoided the assistant altogether and since our SEO Team
             couldn't possibly review the hundreds of stories published daily, many stories 
-            never go through them and this gap likely dragged down our overall SEO performance.
+            never have the opportunity to go through them and this gap likely dragged down our overall SEO performance.
 
       </p>
 
