--- a/explore.html
+++ b/explore.html
@@ -253,8 +253,10 @@
       <br>
 
       <div class="highlight-box">
+        <h4 style="font-size: 12px; text-transform: uppercase; color: #947b57; margin-bottom: -16px;">challenge</h4>
+
         <h3>"Rethink Information Consumption Patterns Amidst The Proliferation 
-          Of AI And Create A Homepage To Represent That."</h3>
+          Of AI And Create A Homepage To Represent That."</h3> 
         
       </div>
 
@@ -373,7 +375,9 @@
         Across both user types, a common sentiment was inferred by way of these two quotes:</p>
 <div class="code-blocks-grid">
         <div class="highlight-box">
-          <p style="font-size: 14px;">User 1 in relation to how they interact with articles.</p>
+          <h4 style="font-size: 12px; text-transform: uppercase; color: #947b57; margin-bottom: 8px;">User 1 in relation to how they 
+            interact with articles.</h4>
+
           <h3 style="font-size:21.8px;">" It's a normal reaction of mine to go to the comment section and see what people are saying. 
           Sometimes it's meaningless but sometimes it brings another 
           perspective or <span style="text-decoration:underline;">
@@ -383,6 +387,8 @@
           </div>
 
          <div class="highlight-box">
+          <h4 style="font-size: 12px; text-transform: uppercase; color: #947b57; margin-bottom: 8px;">User 2 on what makes Instagram an ideal platform 
+            for news consumption.</h4>
 
           <h3>" Like with Instagram, I like the idea of getting various pieces of <span style="text-decoration:underline;">information quickly</span>. "</h3>
   </div>
@@ -460,7 +466,19 @@
 <br>
 
 
+<p class="lead-paragraph">
+  From here, we created this HMW statement:
+</p>
 
+ <div class="highlight-box">
+        <h4 style="font-size: 12px; text-transform: uppercase; color: #947b57; margin-bottom: -16px;">hmw statement</h4>
+        <h3>How might we design a quick, snackable news
+          experience that leverages peer commentary and empowers users to grasp the essence of multiple stories more
+           easily than reading a single dense article?</h3>
+        
+      </div>
+
+      <br>
 
 <h2 id="solution">The Solution</h2>
 
