Enhance bertie-sidekick.html for improved clarity by refining phrasing and correcting grammatical errors. Update explore.html to clarify user quotes and improve readability, ensuring a more engaging presentation of user sentiments.

--- a/bertie-sidekick.html
+++ b/bertie-sidekick.html
@@ -223,7 +223,7 @@
       <p class="lead-paragraph">
         At Forbes, writers are to us what LeBron James is to the Lakers: <b>absolutely pivotal to our success</b>.
         <br></p>
-       <p> Our responsibility on the digital side is to amplify their talent making sure every story is optimized to shine online. 
+       <p> Our responsibility on the digital side of the company, is to amplify their talent making sure every story is optimized to shine online. 
         That means following SEO best practices so Forbes articles consistently rank high on Google, driving visibility, 
         readership, and ultimately revenue.
       </p>
@@ -246,7 +246,7 @@
         <p>
             As a result, most writers avoided the assistant altogether and since our SEO Team
             couldn't possibly review the hundreds of stories published daily, many stories 
-            never have the opportunity to go through them and this gap likely dragged down our overall SEO performance.
+            never have the opportunity to go through them; this gap likely dragged down our overall SEO performance.
 
       </p>
 
@@ -260,7 +260,9 @@
 
 
       <div class="highlight-box">
-        <h3>By giving writers a more effective and user-friendly tool, we can raise the 
+        <h4 style="font-size: 12px; text-transform: uppercase; color: #947b57; margin-bottom: -16px;">Hypothesis</h4>
+
+        <h3>By giving writers a more effective tool, we can raise the 
             baseline for SEO across all stories with the pay off being clear: stronger rankings, more pageviews,
             and ultimately, more revenue for Forbes.
         </h3>
@@ -275,7 +277,7 @@
   <h2 id="results">Results & Impact</h2>
   <ul class="results-list">
     <li>
-      Bertie Sidekick launched October 2024, and one month after its launch, <b>adoption jumped from 29% to 54%.</b></li>
+      The redesigned SEO assistant launched October 22 2024, and one month after its launch, <b>adoption jumped from 29% to 54%.</b></li>
     <li>3 month after launch, <b>adoption was largely retained(-1% drop)</b> despite a 47% increase in active users.</li>
     <li>~4 months after launch (Jan 2025), Forbes recieved its highest comScore for site ranking & visitation in over 12 months.</li>
   </ul>
@@ -337,7 +339,7 @@
      
 
        
-            <h3>Highlighst & Common Sentiments</h3>
+            <h3>Highlights & Common Sentiments</h3>
     <ul class="results-list">
         <li>Writers felt the tool often told them <b>what's wrong, but didn't provide a remidiation</b></li>
         <li>Many were not well-versed in how SEO affects article performance and metrics.</li>
