--- a/explore.html
+++ b/explore.html
@@ -375,7 +375,7 @@
         Across both user types, a common sentiment was inferred by way of these two quotes:</p>
 <div class="code-blocks-grid">
         <div class="highlight-box">
-          <h4 style="font-size: 12px; text-transform: uppercase; color: #947b57; margin-bottom: 8px;">User 1 in relation to how they 
+          <h4 style="font-size: 12px; text-transform: uppercase; color: #947b57; margin-bottom: 8px;">User 1 on how they 
             interact with articles.</h4>
 
           <h3 style="font-size:21.8px;">" It's a normal reaction of mine to go to the comment section and see what people are saying. 
@@ -387,7 +387,7 @@
           </div>
 
          <div class="highlight-box">
-          <h4 style="font-size: 12px; text-transform: uppercase; color: #947b57; margin-bottom: 8px;">User 2 on what makes Instagram an ideal platform 
+          <h4 style="font-size: 12px; text-transform: uppercase; color: #947b57; margin-bottom: 8px;">User 2 on why Instagram is an ideal platform 
             for news consumption.</h4>
 
           <h3>" Like with Instagram, I like the idea of getting various pieces of <span style="text-decoration:underline;">information quickly</span>. "</h3>
