Refine bertie-sidekick.html to enhance clarity and engagement by improving phrasing, adjusting section headings, and emphasizing the impact of the redesigned SEO assistant. Update results to reflect adoption metrics and overall performance improvements.

--- a/bertie-sidekick.html
+++ b/bertie-sidekick.html
@@ -223,8 +223,8 @@
       <p class="lead-paragraph">
         At Forbes, writers are to us what LeBron James is to the Lakers: <b>absolutely pivotal to our success</b>.
         <br></p>
-       <p> Our responsibility on the digital side of the company, is to amplify their talent making sure every story is optimized to shine online. 
-        That means following SEO best practices so Forbes articles consistently rank high on Google, driving visibility, 
+       <p> Our responsibility on the digital side of the company is amplifying their talent by making sure every story is optimized to shine online. 
+        That means following SEO best practices so Forbes' articles consistently rank high on Google, driving visibility, 
         readership, and ultimately revenue.
       </p>
 
@@ -236,9 +236,9 @@
 
   <br>
 
-      <h2 id="challenge">The Problem: Low Usage of Bertie's SEO Tools</h2>
+      <h2 id="challenge">The Problem</h2>
     
-    <h3>The Problem</h3>
+    <h3>Low Usage of Bertie's SEO Tools</h3>
       <p class="lead-paragraph">
         Bertie, our in-house writing platform, already featured an SEO assistant. 
         But internal data showed an open rate of only ~29%, with 
@@ -254,7 +254,7 @@
 
       <h3>The Opportunity</h3>
       <p class="lead-paragraph">
-        We saw this as a chance to reimagine our SEO assistant—designing it to be both more powerful and more intuitive for writers.</p>
+        We saw this as a chance to reimagine our SEO assistant by making it more visible & helpful for writers.</p>
 
     <p class="lead-paragraph"> The hypothesis we set out to test was:</p>
 
@@ -262,7 +262,7 @@
       <div class="highlight-box">
         <h4 style="font-size: 12px; text-transform: uppercase; color: #947b57; margin-bottom: -16px;">Hypothesis</h4>
 
-        <h3>By giving writers a more effective tool, we can raise the 
+        <h3>If we give writers a more effective tool, we can raise the 
             baseline for SEO across all stories with the pay off being clear: stronger rankings, more pageviews,
             and ultimately, more revenue for Forbes.
         </h3>
@@ -277,7 +277,7 @@
   <h2 id="results">Results & Impact</h2>
   <ul class="results-list">
     <li>
-      The redesigned SEO assistant launched October 22 2024, and one month after its launch, <b>adoption jumped from 29% to 54%.</b></li>
+      The redesigned SEO assistant launched October 22 2024, and 1 month after its launch, <b>adoption jumped from 29% to 54%.</b></li>
     <li>3 month after launch, <b>adoption was largely retained(-1% drop)</b> despite a 47% increase in active users.</li>
     <li>~4 months after launch (Jan 2025), Forbes recieved its highest comScore for site ranking & visitation in over 12 months.</li>
   </ul>
