--- a/bertie-sidekick.html
+++ b/bertie-sidekick.html
@@ -220,10 +220,19 @@
       <h2 id="introduction" class="explore-animate">Introduction: SEO and Forbes</h2>
      
 
-      <p class="lead-paragraph">
-        At Forbes, writers are to us what LeBron James is to the Lakers: <b>absolutely pivotal to our success</b>.
-        <br></p>
-       <p> Our responsibility on the digital side of the company is amplifying their talent by making sure every story is optimized to shine online. 
+      <div class="analogy-container">
+  <p class="lead-paragraph" style="margin-bottom: 0px;">
+    At Forbes, writers are to us, what <span id="analogy-text"><i><b>LeBron James is to the Lakers</b></i></span>, absolutely pivotal to our success as an entity.
+    <br>
+  </p>
+  <button id="analogy-refresh" class="sec-btn" aria-label="Get different analogy">
+    <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+      <path d="M7.17466 4.46302C8.83368 3.19001 10.8664 2.5 12.9575 2.5C15.0487 2.5 17.0814 3.19001 18.7404 4.46302C19.7896 5.26807 20.6522 6.27783 21.2815 7.42228L23.0527 6.92706C23.3449 6.84538 23.6575 6.94772 23.8447 7.18637C24.032 7.42502 24.0571 7.75297 23.9082 8.0173L22.1736 11.0983C22.076 11.2717 21.9136 11.3991 21.722 11.4527C21.5304 11.5063 21.3254 11.4815 21.1521 11.3839L18.0714 9.64919C17.8071 9.50036 17.6584 9.20697 17.6948 8.90582C17.7311 8.60466 17.9453 8.35506 18.2374 8.27338L19.7901 7.83927C19.2797 7.00108 18.6161 6.25835 17.8273 5.65305C16.4302 4.58106 14.7185 4 12.9575 4C11.1966 4 9.48486 4.58106 8.08781 5.65305C6.69076 6.72504 5.68647 8.22807 5.2307 9.92901C5.1235 10.3291 4.71225 10.5665 4.31215 10.4593C3.91205 10.3521 3.67461 9.94088 3.78182 9.54078C4.32304 7.52089 5.51565 5.73603 7.17466 4.46302Z" fill="#947b57"/>
+      <path d="M4.18603 12.5458C4.3776 12.4922 4.58261 12.517 4.75594 12.6146L7.83665 14.3493C8.10096 14.4981 8.2496 14.7915 8.21325 15.0927C8.17691 15.3938 7.96274 15.6434 7.6706 15.7251L6.1265 16.1568C6.63702 16.9958 7.30106 17.7392 8.09052 18.345C9.48757 19.417 11.1993 19.998 12.9602 19.998C14.7212 19.998 16.4329 19.417 17.83 18.345C19.227 17.273 20.2313 15.77 20.6871 14.069C20.7943 13.6689 21.2055 13.4315 21.6056 13.5387C22.0057 13.6459 22.2432 14.0572 22.136 14.4573C21.5947 16.4771 20.4021 18.262 18.7431 19.535C17.0841 20.808 15.0514 21.498 12.9602 21.498C10.8691 21.498 8.8364 20.808 7.17738 19.535C6.12761 18.7295 5.26458 17.719 4.63517 16.5738L2.85527 17.0714C2.56313 17.1531 2.25055 17.0507 2.06329 16.8121C1.87603 16.5734 1.85096 16.2455 1.99978 15.9812L3.73441 12.9001C3.832 12.7268 3.99445 12.5993 4.18603 12.5458Z" fill="#947b57"/>
+    </svg>
+  </button>
+</div>
+       <p> Our responsibility on the digital side of the company is amplifying their talent; making sure every story is optimized to shine online. 
         That means following SEO best practices so Forbes' articles consistently rank high on Google, driving visibility, 
         readership, and ultimately revenue.
       </p>
