--- a/explore.html
+++ b/explore.html
@@ -253,7 +253,7 @@
       <br>
 
       <div class="highlight-box">
-        <h4 style="font-size: 12px; text-transform: uppercase; color: #947b57; margin-bottom: -16px;">challenge</h4>
+        <h4 style="font-size: 12px; text-transform: uppercase; color: #5b4b34; margin-bottom: -16px;">challenge</h4>
 
         <h3>"Rethink Information Consumption Patterns Amidst The Proliferation 
           Of AI And Create A Homepage To Represent That."</h3> 
@@ -375,22 +375,22 @@
         Across both user types, a common sentiment was inferred by way of these two quotes:</p>
 <div class="code-blocks-grid">
         <div class="highlight-box">
-          <h4 style="font-size: 12px; text-transform: uppercase; color: #947b57; margin-bottom: 8px;">User 1 on how they 
+          <h4 style="font-size: 12px; text-transform: uppercase; color: #5b4b34; margin-bottom: 8px;">User 1 on how they 
             interact with articles.</h4>
 
-          <h3 style="font-size:21.8px;">" It's a normal reaction of mine to go to the comment section and see what people are saying. 
+          <p style="font-size:21.8px;">" It's a normal reaction of mine to go to the comment section and see what people are saying. 
           Sometimes it's meaningless but sometimes it brings another 
           perspective or <span style="text-decoration:underline;">
-          summary</span>. "</h3>
+          summary</span>. "</p>
 
 
           </div>
 
          <div class="highlight-box">
-          <h4 style="font-size: 12px; text-transform: uppercase; color: #947b57; margin-bottom: 8px;">User 2 on why Instagram is an ideal platform 
+          <h4 style="font-size: 12px; text-transform: uppercase; color: #5b4b34; margin-bottom: 8px;">User 2 on Instagram as an ideal platform 
             for news consumption.</h4>
 
-          <h3>" Like with Instagram, I like the idea of getting various pieces of <span style="text-decoration:underline;">information quickly</span>. "</h3>
+            <p style="font-size:21.8px;">" Like with Instagram, I like the idea of getting various pieces of <span style="text-decoration:underline;">information quickly</span>. "</p>
   </div>
   
 </div>
@@ -408,7 +408,7 @@
       <div class="code-blocks-grid">
        
       <div class="code-block">
-          <p style="font-size: 12px; text-transform: uppercase; color: #947b57;">Insight 1</p>
+        <h4 style="font-size: 12px; text-transform: uppercase; color: #5b4b34; margin-bottom: 8px;">Insight 1</h4>
           <h4 class="code-block-title">
             <span class="code-block-icon">  <svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" transform="rotate(0 0 0)">
               <path d="M8.80437 4.10156C6.7626 4.10156 5.10742 5.75674 5.10742 7.79851C5.10742 9.84027 6.7626 11.4955 8.80437 11.4955C10.8461 11.4955 12.5013 9.84027 12.5013 7.79851C12.5013 5.75674 10.8461 4.10156 8.80437 4.10156Z" fill="#947b57"/>
@@ -428,7 +428,7 @@
         </div>
 
         <div class="code-block">
-          <p style="font-size: 12px; text-transform: uppercase; color: #947b57;">Insight 2</p>
+          <h4 style="font-size: 12px; text-transform: uppercase; color: #5b4b34; margin-bottom: 8px;">Insight 2</h4>
           <h4 class="code-block-title">
             <span class="code-block-icon"><svg width="18" height="18" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" transform="rotate(0 0 0)">
               <path opacity="0.4" d="M7.41016 2C7.05632 2 6.75061 2.24731 6.6767 2.59336L4.4267 13.1285C4.37942 13.3499 4.43468 13.5809 4.57707 13.7569C4.71947 13.9329 4.93376 14.0352 5.16016 14.0352H10.6842L10.0637 21.1852C10.0338 21.5302 10.244 21.8509 10.5724 21.9611C10.9008 22.0712 11.2619 21.9422 11.4461 21.6489L19.4749 8.86368C19.6201 8.63255 19.6282 8.34081 19.4962 8.10195C19.3641 7.86309 19.1127 7.71482 18.8398 7.71482L13.1876 7.71482L15.368 3.06863C15.477 2.83632 15.4597 2.5644 15.3221 2.3478C15.1845 2.1312 14.9457 2 14.6891 2H7.41016Z" fill="#947b57"/>
@@ -444,7 +444,7 @@
       </div>
 
       <div class="code-block">
-        <p style="font-size: 12px; text-transform: uppercase; color: #947b57;">Insight 3</p>
+          <h4 style="font-size: 12px; text-transform: uppercase; color: #5b4b34; margin-bottom: 8px;">Insight 3</h4>
         <h4 class="code-block-title">
           <span style="margin-bottom: -8px;"> <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" transform="rotate(0 0 0)">
             <g opacity="0.4">
@@ -471,7 +471,7 @@
 </p>
 
  <div class="highlight-box">
-        <h4 style="font-size: 12px; text-transform: uppercase; color: #947b57; margin-bottom: -16px;">hmw statement</h4>
+        <h4 style="font-size: 12px; text-transform: uppercase; color: #5b4b34; margin-bottom: -16px;">hmw statement</h4>
         <h3>How might we design a quick, snackable news
           experience that leverages peer commentary and empowers users to grasp the essence of multiple stories more
            easily than reading a single dense article?</h3>
