--- a/bertie-sidekick.html
+++ b/bertie-sidekick.html
@@ -221,7 +221,7 @@
 
       <div class="analogy-container">
   <p class="lead-paragraph" style="margin-bottom: 0px;">
-    At Forbes, writers are to us, what <span id="analogy-text"><i><b>LeBron James is to the Lakers</b></i></span>; pivotal to our success as an entity.
+    Writers are to Forbes, what <span id="analogy-text"><i><b>LeBron James is to the Lakers</b></i></span>; pivotal to its success as an entity.
     <br>
   </p>
   <button id="analogy-refresh" class="sec-btn" aria-label="Get different analogy">
