Enhance work.html layout for improved structure and responsiveness by introducing a dedicated work layout and title section. Update styles.css to implement desktop and mobile-specific styles for the work page, ensuring better visual presentation. Refactor index.js to streamline button activation logic for the work page, improving user navigation.

--- a/work.html
+++ b/work.html
@@ -69,9 +69,13 @@
     </div>
   </nav>
 
-  <div style="margin:auto; text-align: center; margin-top: 140px;"><h2>Recent Work</h2></div>
-
-  <div class="project-grid">
+  <div class="work-layout">
+    <div class="work-title-section">
+      <h2>Recent Work</h2>
+    </div>
+    
+    <div class="project-grid-wrapper">
+      <div class="project-grid">
     <a href="explore.html" class="project-content">
         <div class="image-item desktop-only">
           <div class="gif-container interactive-gif">
@@ -120,6 +124,8 @@
      </p>
     </a>
 
+  </div>
+    </div>
   </div>
 
  <!-- <div class="content-divider">end of content</div> -->
