Update styles.css to increase font size for work titles, enhance image link hover effects, and refine button text color. These changes improve visual hierarchy and user interaction feedback.

--- a/work.html
+++ b/work.html
@@ -76,32 +76,34 @@
     
     <div class="project-grid-wrapper">
       <div class="project-grid">
-    <a href="explore.html" class="project-content">
-        <div class="image-item desktop-only">
-          <div class="gif-container interactive-gif">
-            <div class="gif-loader"></div>
-            <img src="xplore.gif" 
-                 alt="User interface for Forbes: Explore." 
-                 loading="eager" 
-                 class="gif-loading gif-interactive"
-                 data-gif-src="xplore.gif"
-                 data-static-src="Preview.png">
-            <div class="gif-play-indicator">
-              <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <circle cx="12" cy="12" r="10" fill="rgba(255,255,255,0.9)"/>
-                <path d="M10 8l6 4-6 4V8z" fill="black"/>
-              </svg>
+    <div class="project-content">
+        <a href="explore.html" class="image-link">
+          <div class="image-item desktop-only">
+            <div class="gif-container interactive-gif">
+              <div class="gif-loader"></div>
+              <img src="xplore.gif" 
+                   alt="User interface for Forbes: Explore." 
+                   loading="eager" 
+                   class="gif-loading gif-interactive"
+                   data-gif-src="xplore.gif"
+                   data-static-src="Preview.png">
+              <div class="gif-play-indicator">
+                <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <circle cx="12" cy="12" r="10" fill="rgba(255,255,255,0.9)"/>
+                  <path d="M10 8l6 4-6 4V8z" fill="black"/>
+                </svg>
+              </div>
+              <p class="gif-annotation">
+                <span class="desktop-text">Hover to play</span>
+              </p>
             </div>
-            <p class="gif-annotation">
-              <span class="desktop-text">Hover to play</span>
-            </p>
           </div>
-        </div>
-        <div class="image-item mobile-only">
-          <img src="Preview.png" 
-               alt="User interface for Forbes: Explore." 
-               loading="lazy">
-        </div>
+          <div class="image-item mobile-only">
+            <img src="Preview.png" 
+                 alt="User interface for Forbes: Explore." 
+                 loading="lazy">
+          </div>
+        </a>
         <div id="tagdiv">
           <span class="context-tag">0→1 Product Design</span>
           <span class="context-tag">User Research</span>
@@ -109,20 +111,22 @@
         </div>
       <h3>Forbes: Explore</h3>
       <p>Rethinking news & information consumption habits amidst the proliferation of AI.</p>
-    </a>
-    <a href="bertie-sidekick.html" class="project-content">
-      <div class="image-item">
-        <img src="Bertie Publish.png" alt="User interface for Bertie Publish." loading="lazy">
-      </div>
+    </div>
+    <div class="project-content">
+      <a href="bertie-sidekick.html" class="image-link">
+        <div class="image-item">
+          <img src="Bertie Publish.png" alt="User interface for Bertie Publish." loading="lazy">
+        </div>
+      </a>
       <div id="tagdiv">
         <span class="context-tag">CMS</span>
         <span class="context-tag">Writing UX</span>
         <span class="context-tag">Workflow Automation</span>
       </div>
-    <h3>Bertie: SEO Sidekick & Assistant</h3>
-    <p>Every superhero needs a sidekick; making SEO auditing more engaging and informative for Forbes' journalists.
-     </p>
-    </a>
+      <h3>Bertie: SEO Sidekick & Assistant</h3>
+      <p>Every superhero needs a sidekick; making SEO auditing more engaging and informative for Forbes' journalists.
+       </p>
+    </div>
 
   </div>
     </div>
