Refactor index.js to obfuscate password handling and improve logging. Update HTML files to reference minified JavaScript version, enhancing load performance. Modify .gitignore to exclude original index.js while allowing minified files.

--- a/bertie-sidekick.html
+++ b/bertie-sidekick.html
@@ -676,7 +676,7 @@ higher rate of Digests opened per user session.
       </div>
   </div>
   <div class="toolbar-scrim"></div>
-  <script src="index.js"></script>
+  <script src="index.min.js"></script>
   <script src="particles.js"></script>
   <script src="image-optimizer.js"></script>
 </body>
