--- a/explore.html
+++ b/explore.html
@@ -697,7 +697,7 @@ higher rate of Digests opened per user session MoM after its addition.
       </div>
   </div>
   <div class="toolbar-scrim"></div>
-  <script src="index.js"></script>
+  <script src="index.min.js"></script>
   <script src="particles.js"></script>
   <script src="image-optimizer.js"></script>
 </body>
