--- a/about.html
+++ b/about.html
@@ -198,7 +198,7 @@
         </svg></button>
   </div>
 </div>
-  <script src="index.js"></script>
+  <script src="index.min.js"></script>
   <script src="particles.js"></script>
   <script src="image-optimizer.js"></script>
 </body>
