Update explore.html to simplify phrasing in the header and correct the timeline detail for the legacy homepage redesign date, enhancing clarity and accuracy of the content.

--- a/explore.html
+++ b/explore.html
@@ -290,7 +290,7 @@
     </div>
   </div>
   <div class="results-divider"></div>
-  <h3>At Its Peak, Explore Had Achieved:</h3>
+  <h3>At Its Peak, Explore Achieved:</h3>
   <div class="metrics-grid">
     <div class="metric">
       <div class="metric-number">a 4x Increase</div>
@@ -310,7 +310,7 @@
 
 <p style="font-family: 'Courier New', monospace; font-size: 18px; color: #737373;">*Legacy homepage was 
   the Forbes.com landing page that existed before the launch of Explore. It was the page 
-  surfaced to majority of Forbes' users before its redesign in September, 2025.
+  surfaced to majority of Forbes' users before its redesign in October, 2025.
 </p>
 
 <br>
