Update explore.html to simplify image caption and enhance clarity. Modify styles.css to improve image and slider label presentation with new positioning and background styles, ensuring better visibility and user experience across devices.

--- a/explore.html
+++ b/explore.html
@@ -282,7 +282,7 @@
   <div class="image-grid">
     <div class="image-item">
       <img src="GSM.png" alt="User research and persona development" loading="lazy">
-      <p class="image-caption">Speaking at the Global Strategy Meeting with the Explore team and Forbes' Chief Digital & Information Officer.</p>
+      <p class="image-caption">Speaking at the Global Strategy Meeting with the Explore team.</p>
     </div>
     <div class="image-item">
       <img src="Explore launch.jpg" alt="Explore launch" loading="lazy">
