Refactor index.js to implement homepage animation logic based on user visits, enhancing user experience. Remove animation class from HTML to streamline the toolbar presentation. Add debug function to reset animation flag for development purposes.

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <div class="welcome-message">🫡 Welcome!</div>
   </div>
 
-  <nav class="floating-toolbar animate-toolbar">
+  <nav class="floating-toolbar">
     <button class="toolbar-hamburger" aria-label="Open menu">
       <span class="icon-hamburger">
         <svg width="28" height="28" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" transform="rotate(180 0 0)">
