Update bertie-sidekick.html to enhance clarity in the analogy statement. Remove Clvye.gif to streamline project assets. Update .DS_Store to reflect changes in the project directory.

--- a/bertie-sidekick.html
+++ b/bertie-sidekick.html
@@ -221,7 +221,7 @@
 
       <div class="analogy-container">
   <p class="lead-paragraph" style="margin-bottom: 0px;">
-    Writers are to Forbes, what <span id="analogy-text"><i><b>LeBron James is to the Lakers</b></i></span>; pivotal to its success as an entity.
+    Writers are to Forbes, what <span id="analogy-text"><i><b>LeBron James is to the Lakers</b></i></span>; pivotal to the overall success of the entity.
     <br>
   </p>
   <button id="analogy-refresh" class="sec-btn" aria-label="Get different analogy">
