Update bertie-sidekick.html to add "Ideation & Design" section, enhance clarity in insights, and improve phrasing for better user understanding. Adjust image references and refine content structure to support a more cohesive narrative.

--- a/bertie-sidekick.html
+++ b/bertie-sidekick.html
@@ -151,7 +151,7 @@
         <a href="#results" class="toc-link">Results & Impact</a>
         <a href="#process" class="toc-link">Process</a>
         <a href="#insights" class="toc-link">Insights</a>
-        <a href="#solution" class="toc-link">Solution</a>
+        <a href="#ideation" class="toc-link">Ideation & Design</a>
         <a href="#lessons" class="toc-link">Lessons Learned</a>
       </nav>
     </aside>
@@ -375,15 +375,7 @@
      
       <h2 id="insights">Insights</h2>
       
-      <br>
-
       <h3>
-        Performing A Heuristic Analysis On The Current Tool
-
-      </h3> 
-
-      <div class="content-image">
-        <img src="Heuristic Artifact.png" alt="Heuristic Artifact"  class="preloaded">
         <p class="image-caption">Design Artifact on the current tool that was used to perform the heuristic analysis.</p>
 
       </div>
@@ -458,11 +450,8 @@
 
 
 
-<h2 id="solution">The Solution</h2>
 
-<p></p>
 
-<h3>Features</h3>
 
 <p>
   The key features that emerged from our research insights and user needs.
