Refactor bertie-sidekick.html to improve layout consistency, enhance clarity in insights, and update image references. Adjust content structure for better readability and user engagement, including the addition of a new feature card for AI-curated summaries.

--- a/bertie-sidekick.html
+++ b/bertie-sidekick.html
@@ -476,15 +476,7 @@
 
 <h3>1. Awareness & Visibility Even If The Assistant Panel Is Closed</h3>
 
-
-
-<div class="content-image">
-  <img src="Variations.png" alt="Variations of seo visibility"  class="preloaded">
-  <p class="image-caption">Utilizing a toggle and pop up messags to surface SEO recommendations even if the assistant panel is closed.</p>
-
-</div>
-
-      <p>One of the first opportunities we explored was how to make the SEO Assistant's presence more visible; especially when the panel was closed or when a writer initially visited the story editor.</p>
+      <p>One of the first opportunities we explored was how to make the SEO Assistant's presence more visible; <b>especially when the panel was closed</b> or when a writer initially visited the story editor.</p>
       
       <p>Initial concepts took two directions:</p>
       <ul>
@@ -499,7 +491,6 @@
       <div class="content-image">
         <img src="Sidekick.png" alt="Sidekick"  class="preloaded">
         <p class="image-caption">Sidekick is a subtle notification system designed to bridge the gap between visibility and focus.</p>
-
       </div>
 
       <p>This approach met writers halfway: SEO guidance stayed visible, yet their creative flow remained uninterrupted.</p>
@@ -531,24 +522,6 @@
 </p>
 
 <div class="feature-gallery">
-  <div class="feature-card">
-    <div class="feature-content">
-      <p></p>
-      <h3 class="feature-headline">Article Digest: AI-Curated Summaries</h3>
-      <p class="feature-description">
-        Digests were designed to save users time in the exploration phase. 
-        Readers got 3 contextual summaries directly from the source article. A <b>bread-and-butter summary</b>, a <b>grounding quote</b>, and a <b>“why it matters”</b> lens that ties the story back to broader <i>social, historical, & even cultural</i> trends, making news consumption more relatable and meaningful.
-        <br>
-        <br>
-        This quick, digestible format allows users to grasp not just what happened, but <b>why 
-        it’s significant in a larger context</b>, without committing to a full read. At the same time, 
-        it provides a clear pathway to the full article for those who want to go deeper.
-      </p>
-    </div>
-         <div class="feature-image image-item">
-       <img src="A Digest.png" alt="AI-powered content discovery interface" loading="lazy">
-     </div>
-  </div>
 
   <div class="feature-card">
     <div class="feature-content">
