--- a/bertie-sidekick.html
+++ b/bertie-sidekick.html
@@ -624,7 +624,7 @@
       
 <p class="lead-paragraph" style="margin-bottom:2px !important;">The uptick in engagement after the redesign of this feature shows that 
 UX improvements can drive measurable improvements in real user behavior. Overall, what I took from this project
-that when it comes to workflow based UX you want to be concious of balancing visibility and distraction by making guidiance felt but not forced down the users throat.</p>
+that when it comes to workflow based UX you want to be conscious of balancing visibility and distraction by making guidiance felt but not forced down the users throat.</p>
 
 <p>A personal highlight professionally for me was being called the "Salvador Dali of product design" by Dor, our Director of Product, Monetization. While 
   the title might be a bit of a stretch, it was a great way to end one of my first high visibility project at Forbes.
