Update bertie-sidekick.html to improve image alt text for better accessibility and clarity, ensuring descriptions accurately reflect the content of the images.

--- a/bertie-sidekick.html
+++ b/bertie-sidekick.html
@@ -595,9 +595,9 @@
     <div class="feature-image image-item">
       <div class="image-slider-container">
         <div class="image-slider">
-          <img src="suggest for me.png" alt="Breakdown of progess before redesign" class="slider-image slider-after" loading="eager">
+          <img src="suggest for me.png" alt="Suggest For Me Call To Action" class="slider-image slider-after" loading="eager">
 
-          <img src="Apply Suggestion.png" alt="Breakdown of progress after redesign" class="slider-image slider-before" loading="eager">
+          <img src="Apply Suggestion.png" alt="Suggest For Me About To Be Applied" class="slider-image slider-before" loading="eager">
 
           <div class="slider-handle">
             <div class="slider-button">
