--- a/bertie-sidekick.html
+++ b/bertie-sidekick.html
@@ -693,7 +693,7 @@ that when it comes to workflow based UX, you want to be conscious of balancing v
       </div>
   </div>
   <div class="toolbar-scrim"></div>
-  <script src="index.min.js"></script>
+  <script src="index.js"></script>
   <script src="particles.js"></script>
   <script src="image-optimizer.js"></script>
 </body>
