--- a/explore.html
+++ b/explore.html
@@ -648,11 +648,11 @@ higher rate of Digests opened per user session MoM after its addition.
     <div style="flex: 1;">
       <h3 style="margin: 0 0 16px 0; font-size: 24px; font-weight: 600; color: #333;">Bertie: SEO Sidekick & Assistant</h3>
       <p style="margin: 0 0 24px 0; color: #666; line-height: 1.6;">Every superhero needs a sidekick; making SEO auditing more engaging and informative for Forbes' journalists.</p>
-      <a href="bertie-sidekick.html" id="bertieButton" style="display: inline-flex; align-items: center; justify-content: center; background: #333; color: white; border: none; padding: 10px 16px; border-radius: 50px; font-size: 16px; font-weight: 500; font-family: 'Bricolage Grotesque', sans-serif; cursor: pointer; transition: background 0.2s ease; text-decoration: none; gap: 8px; width: fit-content;">
-        View Case Study
+      <a href="bertie-sidekick.html" class="password-submit" style="text-decoration: none; width: fit-content;">
         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M5 12h14M12 5l7 7-7 7" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+          <path d="M5 12H19M19 12L12 5M19 12L12 19" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
         </svg>
+        View Case Study
       </a>
     </div>
     <div style="flex: 0 0 300px;">
@@ -741,7 +741,7 @@ higher rate of Digests opened per user session MoM after its addition.
       </div>
   </div>
   <div class="toolbar-scrim"></div>
-  <script src="index.min.js"></script>
+  <script src="index.js"></script>
   <script src="particles.js"></script>
   <script src="image-optimizer.js"></script>
 </body>
