Refine phrasing in about.html for improved clarity in the AI concierge description, ensuring a more polished presentation.

--- a/about.html
+++ b/about.html
@@ -101,7 +101,7 @@
   <div id="identifier">
     
     
-    <h3 style="margin-right: auto;">Ask Jarvis, my AI concierge about these topics.</h3>
+    <h3 style="margin-right: auto;">Ask Jarvis, my AI concierge, about these topics.</h3>
 
     <div id="statusID">
       <p id="status">Systems Active</p></div>
