--- a/bertie-sidekick.html
+++ b/bertie-sidekick.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bertie Sidekick: Automating SEO Tasks for Forbes' Journalists</title>
   <link rel="icon" type="image/png" href="Notionme.png">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css?v=2">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap" rel="stylesheet">
@@ -693,7 +693,7 @@ that when it comes to workflow based UX, you want to be conscious of balancing v
       </div>
   </div>
   <div class="toolbar-scrim"></div>
-  <script src="index.js"></script>
+  <script src="index.js?v=2"></script>
   <script src="particles.js"></script>
   <script src="image-optimizer.js"></script>
 </body>
