--- a/work.html
+++ b/work.html
@@ -9,7 +9,7 @@
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://adeobayomi.com/work.html">
   <link rel="icon" type="image/png" href="Notionme.png">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css?v=2">
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&display=swap" rel="stylesheet">
@@ -189,7 +189,7 @@
       </div>
   </div>
   <div class="toolbar-scrim"></div>
-  <script src="index.min.js"></script>
+  <script src="index.min.js?v=2"></script>
   <script src="particles.js"></script>
   <script src="image-optimizer.js"></script>
 </body>
